tests/ui/impl-trait/call_method_on_inherent_impl_on_rigid_type.rs
//@ revisions: current next
//@[next] compile-flags: -Znext-solver

trait MyDebug {
    fn my_debug(&self);
}

impl MyDebug for &() {
    fn my_debug(&self) {}
}

fn my_foo() -> impl std::fmt::Debug {
    if false {
        let x = &my_foo();
        x.my_debug();
        //~^ ERROR: no method named `my_debug`
    }
    ()
}

fn main() {}
